--- a/n/ne/net/netapp.com.html
+++ b/n/ne/net/netapp.com.html
@@ -1,55 +1,154 @@
-<!--The following is the downloaded HTML source of the netapp.com privacy policy that was archived on 2007-10-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071016004719id_/http%3A//www.netapp.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netapp.com privacy policy that was archived on 2008-02-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080210013755id_/http%3A//www.netapp.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
+
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
+
 
     <title>Network Appliance - Privacy Policy Statement</title>
 
+
+
 <meta name="keywords" content="">
+
 <meta name="description" content="">
+
 <script src="/code/jscript/stylefinder.js" type="text/javascript" language="JavaScript"></script><link rel="StyleSheet" href="/code/styles/main1_ns6_ie4.css" type="text/css">
+
 <script src="/code/jscript/common.js" type="text/javascript" language="JavaScript"></script>
+
 </head>
+
 <body bgcolor="#ffffff" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+
 <table width="820" border="0" cellspacing="0" cellpadding="0">
+
 <tbody><tr>
+
 <td width="155" rowspan="2" valign="bottom">
+
 <!-- script to make the top logo un-clickable on home page -->
+
 <!-- -------------Begin----------------------------------- -->
+
 <script type="text/javascript"><!--
+
 var docURL = new String(document.location);
+
 docURL = docURL.toLowerCase();
+
 var logoTag_link = '<a href="/"><img src="/images/netapp-logo.gif" width=155 height=71 alt="NetApp" border="0"></a>';
+
 var logoTag_nolink = '<img src="/images/netapp-logo.gif" width=155 height=71 alt="NetApp" border="0">';
+
 if ((docURL == "http://www-stage.corp.netapp.com/") || (docURL == "http://www-stage.corp.netapp.com") || (docURL == "http://www-stage.corp.netapp.com/index.html"))
+
 {document.write(logoTag_nolink);}
+
 else
+
 {document.write(logoTag_link);}
+
 //-->
+
 </script><a href="/"><img src="/images/netapp-logo.gif" width="155" height="71" alt="NetApp" border="0"></a>
+
 <noscript><a href="/"><img src="/images/netapp-logo.gif" width=155 height=71 alt="NetApp" border="0"></a></noscript>
+
 <!-- -------------End------------------------------------- -->
 
+
+
 </td>
+
 <td colspan="2" align="right" width="665" height="31">
-<form name="seek1" method="get" action="/search.cgi">
+
+<form name="seek1" method="get" action="/search.cgi" id="bn_searchform">
+
 <table cellpadding="0" cellspacing="0" border="0" align="right">
+
 <tbody><tr><td valign="top"><img src="/images/spacer-trans.gif" width="1" height="7"><br>
+
 <script language="JavaScript" vqptag="doc_level_settings" is_vqp_html="1" vqp_datafile0="globalsites-menu.js" vqp_uid0="846886">cdd__codebase = "/code/dhtml/";cdd__codebase846886 = "";</script>
+
 <script language="JavaScript" vqptag="datafile" src="/code/dhtml/globalsites-menu.js"></script><script language="JavaScript" vqptag="loader_sub" src="/code/dhtml/pbrowser_safari.js"></script>
+
 <script vqptag="placement" vqp_menuid="846886" language="JavaScript">create_menu(846886)</script></td>
+
 	<td valign="top"><img src="/images/spacer-trans.gif" width="1" height="10"><br>
-<input type="hidden" name="col" value="www"><input type="hidden" name="charset" value="UTF-8"><input type="hidden" name="la" value="en"><input type="hidden" name="qp" value=""><input type="hidden" name="qs" value=""><input type="hidden" name="qc" value="www"><input type="hidden" name="pw" value="100%"><input type="hidden" name="ws" value="0"><input type="hidden" name="qm" value="0"><input type="hidden" name="st" value="1"><input type="hidden" name="nh" value="10"><input type="hidden" name="lk" value="1"><input type="hidden" name="rf" value="0"><input type="hidden" name="oq" value=""><input type="hidden" name="rq" value="0"><input type="text" size="20" name="qt" class="search" value="SEARCH" maxlength="2033" onblur="if(this.value=='') this.value='SEARCH';" onfocus="if(this.value=='SEARCH') this.value='';"><img src="/images/home/pixel.gif" alt="" width="2" height="1" border="0"><input type="image" src="/images/icon-search.gif" width="18" height="18" alt="" border="0" name="searchbutton" align="top">
-</td></tr></tbody></table></form></td>
+
+<input type="hidden" name="col" value="www">
+
+<input type="hidden" name="charset" value="UTF-8">
+
+<input type="hidden" name="la" value="EN">
+
+<input type="hidden" name="qp" value="">
+
+<input type="hidden" name="qs" value="">
+
+<input type="hidden" name="qc" value="www">
+
+<input type="hidden" name="pw" value="100%">
+
+<input type="hidden" name="ws" value="0">
+
+<input type="hidden" name="qm" value="0">
+
+<input type="hidden" name="st" value="1"><input type="hidden" name="nh" value="10">
+
+<input type="hidden" name="lk" value="1">
+
+<input type="hidden" name="rf" value="0">
+
+<input type="hidden" name="oq" value="">
+
+<input type="hidden" name="rq" value="0">
+
+
+
+<input type="hidden" name="cn" value="netapp">
+
+<input type="hidden" name="cc" value="">
+
+<input type="hidden" name="st" value="1">
+
+<input type="hidden" name="bn_af" value="site:us">
+
+<input type="hidden" name="bn_if" value="wwwus">
+
+
+
+
+
+<input type="text" size="20" name="qt" class="search" value="SEARCH" maxlength="2033" onblur="if(this.value=='') this.value='SEARCH';" onfocus="if(this.value=='SEARCH') this.value='';">
+
+<img src="/images/home/pixel.gif" alt="" width="2" height="1" border="0">
+
+<input type="image" src="/images/icon-search.gif" width="18" height="18" alt="" border="0" name="searchbutton" align="top">
+
+</td></tr></tbody></table></form>
+
+</td>
+
 </tr>
+
 <tr><td valign="bottom" width="665">
+
     <script language="JavaScript" vqptag="doc_level_settings" is_vqp_html="1" vqp_datafile0="topnav-home.js" vqp_uid0="641306">cdd__codebase = "/code/dhtml/";cdd__codebase641306 = "";</script>
+
     <script language="JavaScript" vqptag="datafile" src="/code/dhtml/topnav-home.js"></script><script language="JavaScript" vqptag="loader_sub" src="/code/dhtml/pbrowser_safari.js"></script><script vqptag="placement" vqp_menuid="641306" language="JavaScript">create_menu(641306)</script>
+
     </td>
+
 </tr>
+
 <!-- **** ORANGE DIVIDING LINE *** -->
+
 <tr><td colspan="3" height="3" bgcolor="#ff6600"><img src="/images/spacer-trans.gif" width="1" height="3"></td></tr></tbody></table>
+
 
 <table width="820" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
@@ -122,12 +221,10 @@ else
 
 
 
+    <div class="naSecTitle">Privacy Policy Statement, North America</div>
+
 <div class="naSecTitleSub"></div>
 
-
-<b><font face="Arial,Helvetica" size="4" color="#1D1C63">Privacy Policy Statement</font></b><br>
-<br>
-<font face="ARIAL, HELVETICA" size="-1">
 This is the Web site of Network Appliance, Inc.<br>
 <br>
 Our postal address is:<br><br>
@@ -136,67 +233,47 @@ Our postal address is:<br><br>
 Sunnyvale, CA  94089</b>
 <br>
 <br>
-We can be reached <a href="company/feedback.cgi">via the Web</a>, or by telephone at 800-44-FILER (800-443-4537).
+We can be reached <a href="/company/feedback.cgi">via the Web</a>, by telephone at 800-44-FILER (800-443-4537), or <a href="mailto:staffingsupport@netapp.com">staffingsupport@netapp.com </a>for job inquiry-related issues.  
+<br>
+<br>
+For each visitor to our Web page, our Web server automatically recognizes only the visitor's domain name, but not the e-mail address (where possible). 
+<br>
+<br>
+We collect e-mail addresses of those who communicate with us via e-mail, user-specific information on what pages visitors access or visit, and information volunteered by the visitor, such as survey information and/or site registrations. 
+<br>
+<br>
+The information we collect is used by us to improve the content of our Web pages, to notify customers about updates to our Web site, to contact customers for marketing purposes, and to track applicants for career opportunities, and is not shared with other organizations for commercial purposes. 
+<br>
+<br>
+If you browse and/or apply for jobs on the Careers portion of our website, your application and any additional information you provide may be used to assess your skills and interests against career opportunities at Network Appliance Inc., and for reporting purposes as may be required by U.S. law. We use your information to communicate with you and inform you of career opportunities. Entities acting on behalf of Network Appliance, Inc with whom we share your information will be bound by terms of confidentiality and this privacy policy
+<br>
+<br>
+If you do not want to receive e-mail from us in the future, please let us know by sending us e-mail via the above form or visiting us at <a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>. 
+<br>
+<br>
+If you supply us with your postal address online you may receive periodic mailings from us with information on new products and services or upcoming events. If you do not wish to receive such mailings, please let us know by sending us e-mail via the above form, writing to us at the above postal address, or visiting us at <a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>. Please provide us with your exact name and address. We will be sure your name is removed from any list we share with other non-commercial organizations. 
+<br>
+<br>
+Persons who supply us with their telephone numbers online may receive telephone contact from us with information regarding new products and services or upcoming events. If you do not wish to receive such telephone calls, please let us know by sending us e-mail via the above form, calling us at the above telephone number, writing to us at the above postal address, or visiting us at <a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>. Please provide us with your name and phone number. We will be sure your name is removed from any list we share with other non-commercial organizations. 
+<br>
+<br>
+With respect to Ad servers: we do not partner with or have special relationships with any ad server companies. 
+<br>
+<br>
+From time to time, we may use customer and applicant information for new, unanticipated uses not previously disclosed in our privacy notice. If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses. If you are concerned about how your information is used, you should check back at our Web site periodically. 
+<br>
+<br>
+Customers and applicants may prevent their information from being used for purposes other than those for which it was originally collected by sending us e-mail via the above form or visiting us at <a href="http://www.netapp.com/company/feedback.cgi">http://www.netapp.com/company/feedback.cgi</a>. 
+<br>
+<br>
+Upon request we offer visitors the ability to have inaccuracies corrected in their contact information. Customers and applicants can have this information corrected by sending us e-mail via the above form, writing to us at the above address, or visiting us at <a href="http://www.netapp.com/company/feedback.cgi">http://www.netapp.com/company/feedback.cgi</a>. 
+<br>
+<br>
+With respect to security: we have appropriate security measures in place in our physical facilities to protect against the loss, misuse, or alteration of information that we have collected from you at our site. 
+<br>
+<br>
+If you feel that this site is not following its stated information policy, you may contact us at the above addresses or phone number.
 <br><br>
-For each visitor to our Web page, our Web server automatically recognizes only
-the visitor's domain name, but not the e-mail address (where possible).
-<br><br>
-We collect e-mail addresses of those who communicate with us via e-mail,
-user-specific information on what pages visitors access or visit, and
-information volunteered by the visitor, such as survey information and/or site
-registrations.
-<br><br>
-The information we collect is used by us to improve the content of our Web
-pages, to notify customers about updates to our Web site, and to contact
-customers for marketing purposes, and is not shared with other organizations for
-commercial purposes.
-<br><br>
-If you do not want to receive e-mail from us in the future, please let us know
-by sending us e-mail via the above form or visiting us at
-<a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>.
-<br><br>
-If you supply us with your postal address online you may receive periodic
-mailings from us with information on new products and services or upcoming
-events.  If you do not wish to receive such mailings, please let us know by
-sending us e-mail via the above form, writing to us at the above postal
-address, or visiting us at <a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>.  Please
-provide us with your exact name and address.  We will be sure your name is
-removed from any list we share with other non-commercial organizations.
-<br><br>
-Persons who supply us with their telephone numbers online may receive telephone
-contact from us with information regarding new products and services or upcoming
-events.  If you do not wish to receive such telephone calls, please let us know
-by sending us e-mail via the above form, calling us at the above telephone
-number, writing to us at the above postal address, or visiting us at
-<a href="/company/optout.cgi">http://www.netapp.com/company/optout.cgi</a>.  Please provide us with your name
-and phone number.  We will be sure your name is removed from any list we share
-with other non-commercial organizations.
-<br><br>
-With respect to Ad servers: we do not partner with or have special relationships
-with any ad server companies. 
-<br><br> 
-From time to time, we may use customer information for new, unanticipated uses
-not previously disclosed in our privacy notice.  If our information practices
-change at some time in the future we will post the policy changes to our Web
-site to notify you of these changes and provide you with the ability to opt out
-of these new uses.  If you are concerned about how your information is used, you
-should check back at our Web site periodically.
-<br><br>
-Customers may prevent their information from being used for purposes other than
-those for which it was originally collected by sending us e-mail via the above form or visiting us at <a href="/company/feedback.cgi">http://www.netapp.com/company/feedback.cgi</a>.
-<br><br>
-Upon request we offer visitors the ability to have inaccuracies corrected in
-their contact information.
-Customers can have this information corrected by sending us e-mail via the above form, writing to us at the above address, or visiting us at
-<a href="/company/feedback.cgi">http://www.netapp.com/company/feedback.cgi</a>.
-<br><br>
-With respect to security: we have appropriate security measures in place in our
-physical facilities to protect against the loss, misuse, or alteration of
-information that we have collected from you at our site.
-<br><br>
-If you feel that this site is not following its stated information policy, you
-may contact us at the above addresses or phone number.
-</font><br><br>
 
 
 
@@ -229,18 +306,6 @@ may contact us at the above addresses or phone number.
 	</tr>
 </tbody></table>
 <br>
-<!-- ######### START OMNITURE US TAG ###### -->
-
-<!-- ****************************************************** Omniture tags DO NOT ALTER ********************************************** -->
-<!-- SiteCatalyst code version: H.7.
-Copyright 1997-2006 Omniture, Inc. More info available at
-http://www.omniture.com -->
-<script language="JavaScript" src="/code/jscript/s_code_intl02.js"></script>
-<!--/DO NOT REMOVE/-->
-<!-- End SiteCatalyst code version: H.7. -->
-
-<!-- #########  END OMNITURE US TAG  ###### -->
-
 
 <script language="javascript" src="/code/jscript/baynote.js"></script>
 
@@ -250,7 +315,7 @@ http://www.omniture.com -->
         baynote_tag.code="www";
         baynote_tag.type="baynoteObserver";
         baynote_tag.show();
-</script><div id="_baynote_0_placeholder"></div><img id="_baynote_http://service.baynote.net_netapp_www" src="http://service.baynote.net/baynote/customerstatusjs/netapp-www?customerId=netapp&amp;code=www&amp;x=01580495970323" width="1" height="1">
+</script><div id="_baynote_0_placeholder"></div><img id="_baynote_http://service.baynote.net_netapp_www" src="http://service.baynote.net/baynote/customerstatusjs/netapp-www?customerId=netapp&amp;code=www&amp;x=01580495978139" width="1" height="1">
 
 <!-- START OF SmartSource Data Collector TAG -->
 <!-- WebTrends SmartSource Data Collector                  -->
@@ -416,6 +481,26 @@ dcsTag();
 </noscript>
 <!-- END OF Data Collection Server TAG -->
 
+
+<!-- BEGIN Code to execute stuff on selective pages only -->
+
+<script language="JavaScript" src="/code/jscript/selectiveExec.js"></script>
+
+<!-- END Code to execute stuff on selective pages only -->
+
+
+
+<!-- ######### START OMNITURE US TAG ###### -->
+
+<!-- ****************************************************** Omniture tags DO NOT ALTER ********************************************** -->
+<!-- SiteCatalyst code version: H.7.
+Copyright 1997-2006 Omniture, Inc. More info available at
+http://www.omniture.com -->
+<script language="JavaScript" src="/code/jscript/s_code_intl02.js"></script>
+<!--/DO NOT REMOVE/-->
+<!-- End SiteCatalyst code version: H.7. -->
+
+<!-- #########  END OMNITURE US TAG  ###### -->
 
 
 </body></html>
