--- a/b/bu/buy/buysellwebsite.com.html
+++ b/b/bu/buy/buysellwebsite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buysellwebsite.com privacy policy that was archived on 2007-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071210221345id_/http%3A//www.buysellwebsite.com/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buysellwebsite.com privacy policy that was archived on 2008-02-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080212032125id_/http%3A//www.buysellwebsite.com/privacy-policy.htm) for the most accurate reproduction.-->
 
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns="http://www.w3.org/TR/REC-html40"><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -448,7 +448,7 @@ layout-grid-mode:line"><span style="font-weight: 400">Changes in this Privacy
 			<span style="text-decoration: none"><font color="#000080">Toll</font></span></a> 
 			Free:</font></b><font color="#FFFFFF" face="Verdana" size="2"> 
 			800.564.2749 </font><font color="#FFFFFF" size="1" face="Arial">
-			9am-5pm EST </font><b><font color="#FFFFFF" face="Verdana" size="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			9am-5pm EST</font><b><font color="#FFFFFF" face="Verdana" size="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font></b></td>
 		</tr>
 	</tbody></table>
@@ -477,7 +477,7 @@ layout-grid-mode:line"><span style="font-weight: 400">Changes in this Privacy
 			<a href="advertise"><font color="#999999">Advertise</font></a>
 			<font color="#808080">&nbsp; </font>
 			<a href="content/websites_for_sale.htm"><font color="#A0A0A0">
-			Content</font></a>&nbsp;&nbsp; <a href="suggestions/default.htm">
+			Resources</font></a>&nbsp;&nbsp; <a href="suggestions/default.htm">
 			<font color="#000080">Suggestions</font></a><font color="#000080">?</font><font color="#808080" face="Verdana" size="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font></font></p></td>
 			<td width="194" height="28"><font face="Arial" size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -486,6 +486,17 @@ layout-grid-mode:line"><span style="font-weight: 400">Changes in this Privacy
 		</tr>
 	</tbody></table>
 	</center></div>
+	
+	<!--Google Analytics Code - Lines 61-69 //-->
+	<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3386912-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 
 </td></tr><!--msnavigation--></tbody></table>
 
