--- a/f/fo/fox/foxybingo.com.html
+++ b/f/fo/fox/foxybingo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foxybingo.com privacy policy that was archived on 2007-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071214202514id_/http%3A//www.foxybingo.com/site/general/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foxybingo.com privacy policy that was archived on 2008-02-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080213145540id_/http%3A//www.foxybingo.com/site/general/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -691,17 +691,16 @@ height=485, left=0,top=0');void(0);");}>-->Foxy Radio</a> | <a href="http://foru
               <param name="quality" value="high">
               <embed src="flash/topleft.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="153" height="111">
   </object></div>
-<div class="orangecontentarea"><img src="fb2images/fb2_hdg_promo.gif" style="margin-top:22px"><a href="/site/promotions/advent/index.php"><img src="/site/fb2images/home/advent_promo.jpg" style="margin-top:5px" border="0"></a>
+<div class="orangecontentarea"><img src="fb2images/fb2_hdg_promo.gif" style="margin-top:22px"><a href="/site/promotions/cruise/march/index.php"><img src="/site/fb2images/home/cruise_promo.jpg" style="margin-top:5px" border="0"></a>
 
 
 <img src="fb2images/fb2_hdg_more.gif" alt="Offers at Foxybingo" style="margin-top:5px">
 
 <ul>
-	<li>» <a href="/site/promotions/advent/index.php">Advent Calendar</a></li>
-	<li>» <a href="/site/promotions/diamond_earrings.php">Win Diamond Earrings</a></li>
+	<li>» <a href="/site/promotions/loyalty.php">Loyalty Scheme</a></li>
 	<li>» <a href="/site/promotions/teambingo/index.php">Team Bingo</a></li>
-	<!--<li>&raquo; <a href= "/site/games/chat/tourneys.php">Foxy Fab Fives</a></li>-->
 	<li>» <a href="/site/promotions/vir/index.php">VIR Bonuses</a></li>
+	<li>» <a href="/site/promotions/index.php">Cashback Day</a></li>
 	<li>» <a href="/site/promotions/referfriend.php">Refer a Friend</a></li>
 </ul>	
 	<br><div><a href="/site/promotions/index.php">Click here for more great promotions &gt;&gt;</a></div>
