--- a/u/ur/urb/urbanexcess.com.html
+++ b/u/ur/urb/urbanexcess.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the urbanexcess.com privacy policy that was archived on 2007-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071216163634id_/http%3A//www.urbanexcess.com/Store/Tab.aspx%3Ftabid%3D3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the urbanexcess.com privacy policy that was archived on 2008-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080215040000id_/http%3A//www.urbanexcess.com/Store/Tab.aspx%3Ftabid%3D3) for the most accurate reproduction.-->
 
 <html><head>
 	<title>UrbanExcess.com - Mens &amp; Womens Fashion Accessories  - Privacy Policy</title>
@@ -718,27 +718,7 @@ document.write ("<link rel='stylesheet' type='text/css' href='http://clients.cre
 	
 		<tr class="catoff"> 
             <td>&nbsp;</td>
-            <td><a href="/Skinny%20Ties/" class="catoff">Skinny Ties</a></td>
-            <td>&nbsp;</td>
-        </tr>
-	
-		<tr> 
-			<td colspan="3" class="catdiv"><img src="/images/1p.gif" width="150" height="1"></td>
-		</tr>
-	
-		<tr class="catoff"> 
-            <td>&nbsp;</td>
             <td><a href="/Bucket%20Hats/" class="catoff">Bucket Hats</a></td>
-            <td>&nbsp;</td>
-        </tr>
-	
-		<tr> 
-			<td colspan="3" class="catdiv"><img src="/images/1p.gif" width="150" height="1"></td>
-		</tr>
-	
-		<tr class="catoff"> 
-            <td>&nbsp;</td>
-            <td><a href="/Children's%20Hats/" class="catoff">Children's Hats</a></td>
             <td>&nbsp;</td>
         </tr>
 	
@@ -930,7 +910,16 @@ You provide most such information when you search, buy, order, post reviews, or 
 			<td colspan="3" align="center">
 				<table cellpadding="6" cellspacing="0" class="bottombar" width="100%">
 					<tbody><tr>
-						<td class="bottombar" align="center">Copyright © www.urbanexcess.com 2007<br>Design and e-commerce solution provided by <a class="bottombar" href="http://www.channeladvisor.com">ChannelAdvisor Corporation</a>.</td>
+						<td class="bottombar" align="center">Copyright © www.urbanexcess.com 2008
+
+&lt;script language="JavaScript" src="http://www.sayutracking.co.uk/landing.js?client_id=3424"&gt;
+&lt;/script&gt;
+&lt;noscript&gt;
+&lt;img height=1 width=1 border=0 src="http://www.sayutracking.co.uk/landing.js?js=0&amp;client_id=3424"&gt;
+&lt;/noscript&gt;
+
+
+<br>Design and e-commerce solution provided by <a class="bottombar" href="http://www.channeladvisor.com">ChannelAdvisor Corporation</a>.</td>
 					</tr>
 				</tbody></table>
 			</td>
