--- a/n/na/nat/nationalsurveypanel.com.html
+++ b/n/na/nat/nationalsurveypanel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nationalsurveypanel.com privacy policy that was archived on 2007-10-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071011232730id_/http%3A//nationalsurveypanel.com/info.htm%3Ftp%3Dprivacy%26promo_name%3D848name) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nationalsurveypanel.com privacy policy that was archived on 2008-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080215181617id_/http%3A//nationalsurveypanel.com/info.htm%3Ftp%3Dprivacy%26promo_name%3D848name) for the most accurate reproduction.-->
 
 <html><head>
 <title>Help Desk</title>
@@ -186,7 +186,7 @@ li {
 -->
 </style></head>
 <body bgcolor="#ffffff" onload="MM_preloadImages('http://i.Nationalsurveypanel.com/cs/i/help_btnf2.gif','http://i.Nationalsurveypanel.com/cs/i/redeem_btnf2.gif','http://i.Nationalsurveypanel.com/cs/i/testi_btnf2.gif','http://i.Nationalsurveypanel.com/cs/i/contact_btnf2.gif');">
-   
+   <h2></h2>
 <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
   <tbody><tr>
    <td><img src="http://i.Nationalsurveypanel.com/cs/i/spacer.gif" width="10" height="1" border="0"></td>
@@ -222,7 +222,7 @@ li {
         <td align="right" background="http://i.Nationalsurveypanel.com/cs/i/r6_c2.gif" width="50%"><img src="http://i.Nationalsurveypanel.com/cs/i/menu_left_shadow.gif" width="9" height="32" border="0"></td>
 
 
-        <td><a href="http://nationalsurveypanel.com/info.htm?user_gift_id=&amp;promo_name=848name&amp;gift=&amp;tp=faq" target="_self" onmouseover="MM_swapImage('help_btn','','http://i.Nationalsurveypanel.com/cs/i/help_btnf2.gif',1);" onmouseout="MM_swapImgRestore()"><img name="help_btn" src="http://i.Nationalsurveypanel.com/cs/i/help_btn.gif" width="103" height="32" border="0"></a><a href="http://nationalsurveypanel.com/redeem.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('redeem_btn','','http://i.Nationalsurveypanel.com/cs/i/redeem_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="redeem_btn" src="http://i.Nationalsurveypanel.com/cs/i/redeem_btn.gif" width="103" height="32" border="0"></a><a href="http://nationalsurveypanel.com/testimonials.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('testi_btn','','http://i.Nationalsurveypanel.com/cs/i/testi_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="testi_btn" src="http://i.Nationalsurveypanel.com/cs/i/testi_btn.gif" width="103" height="32" border="0"></a><a href="http://nationalsurveypanel.com/cs/?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('contact_btn','','http://i.Nationalsurveypanel.com/cs/i/contact_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="contact_btn" src="http://i.Nationalsurveypanel.com/cs/i/contact_btn.gif" width="103" height="32" border="0"></a></td>
+        <td><a href="http://www.nationalsurveypanel.com/info.htm?user_gift_id=&amp;promo_name=848name&amp;gift=&amp;tp=faq" target="_self" onmouseover="MM_swapImage('help_btn','','http://i.Nationalsurveypanel.com/cs/i/help_btnf2.gif',1);" onmouseout="MM_swapImgRestore()"><img name="help_btn" src="http://i.Nationalsurveypanel.com/cs/i/help_btn.gif" width="103" height="32" border="0"></a><a href="http://www.nationalsurveypanel.com/redeem.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('redeem_btn','','http://i.Nationalsurveypanel.com/cs/i/redeem_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="redeem_btn" src="http://i.Nationalsurveypanel.com/cs/i/redeem_btn.gif" width="103" height="32" border="0"></a><a href="http://www.nationalsurveypanel.com/testimonials.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('testi_btn','','http://i.Nationalsurveypanel.com/cs/i/testi_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="testi_btn" src="http://i.Nationalsurveypanel.com/cs/i/testi_btn.gif" width="103" height="32" border="0"></a><a href="http://www.nationalsurveypanel.com/cs/?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self" onmouseover="MM_swapImage('contact_btn','','http://i.Nationalsurveypanel.com/cs/i/contact_btnf2.gif',1);" onmouseout="MM_swapImgRestore();"><img name="contact_btn" src="http://i.Nationalsurveypanel.com/cs/i/contact_btn.gif" width="103" height="32" border="0"></a></td>
 
         <td align="left" background="http://i.Nationalsurveypanel.com/cs/i/r6_c9.gif" width="50%"><img name="r6_c8" src="http://i.Nationalsurveypanel.com/cs/i/r6_c8.gif" width="9" height="32" border="0"></td>
    <td background="http://i.Nationalsurveypanel.com/cs/i/r6_c9.gif" height="32"><img src="http://i.Nationalsurveypanel.com/cs/i/r6_c9.gif" width="10" height="32" border="0"></td>
@@ -289,13 +289,13 @@ Davie, FL 33325
   </tr>
   <tr>
    <td colspan="7" align="center" class="copyright_txt">
-<a href="/company.htm?tp=products&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=33d6863ead72c832f298edd05a6f2cac" target="_self">Advertise</a>
+<a href="/company.htm?tp=products&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=547f1a21fe72dee408714df1bece3b08" target="_self">Advertise</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="/info.htm?tp=tos&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=33d6863ead72c832f298edd05a6f2cac" target="_self">Terms &amp; Conditions</a>
+<a href="/info.htm?tp=tos&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=547f1a21fe72dee408714df1bece3b08" target="_self">Terms &amp; Conditions</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="/info.htm?tp=privacy&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=33d6863ead72c832f298edd05a6f2cac" target="_self">Privacy Policy</a>
+<a href="/info.htm?tp=privacy&amp;user_gift_id=&amp;promo_name=848name&amp;gift=&amp;SID=547f1a21fe72dee408714df1bece3b08" target="_self">Privacy Policy</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="http://nationalsurveypanel.com/em_unsub.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self">Unsubscribe</a>
+<a href="http://www.nationalsurveypanel.com/em_unsub.htm?user_gift_id=&amp;promo_name=848name&amp;gift=" target="_self">Unsubscribe</a>
 <br>
 <br>
         </td>
